src/objects/netsuite_conn__Contact_Sync_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>netsuite_conn__Contact_Roles_To_Sync__c</fullName>
        <description>Store all the Account Contact Role(seperated by comma)s chosen by the user. It will decide the criteria, which contact needs to be synced.</description>
        <label>Contact Roles To Sync</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Create__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Disable_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Filter_Contact_From_Account_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By default contact filtering is on Opportunity Contact role sublist, in case user wants the contact filtering on account contact role, then this check box can be checked.</description>
        <label>Filter Contact From Account Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Update__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Use_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Batch</label>
        <type>Checkbox</type>
    </fields>
    <label>Contact Sync Settings</label>
</CustomObject>